--- a/NewsSite.BL/NewsSite.BL.csproj
+++ b/NewsSite.BL/NewsSite.BL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Words" Version="20.12.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
