Реализовано сохранение данных о пользователях (регистрация) и их новостях (сохранение данных в БД и файлов документов).
Перемещены модели для БД в новое решение.

Интерфейс контроллера перенесён в решение с UI.

Контроллеры теперь хранят экземпляр IWebHostEnvironment.
Модели для БД теперь корректно реализуют их интерфейсы.

--- a/WebApplication1/NewsSite.UI.csproj
+++ b/WebApplication1/NewsSite.UI.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\NewsSite.BL\NewsSite.BL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\NewsFiles\" />
+  </ItemGroup>
+
 </Project>
