--- a/NewsSite.BL/NewsSite.BL.csproj
+++ b/NewsSite.BL/NewsSite.BL.csproj
@@ -18,6 +18,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NewsSite.Domain\NewsSite.Domain.csproj" />
   </ItemGroup>
 
 </Project>
