Реализован вывод заголовка новости и его текста на страницу просмотра.
Стилистические улучшения страниц, в частности Главной и Просмотра (Watch).

--- a/prepros.config
+++ b/prepros.config
@@ -909,6 +909,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "WebApplication1/wwwroot/scss/DefaultStyles.scss",
+        "config": {
+          "compileImported": true
+        }
+      }
+    ]
   }
 }
