Введены тесты, создана система логирования результата методов.
Созданы классы, реализующие функционал логирования.
FullDbManager теперь реализует интерфейс логирования (ILogger).
Созданы необходимые классы и тест для метода добавления сущности в БД (для одного из типов).
Domain переименован в Entities.

Удалены ненужные папки из проекта.

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /WebApplication1/wwwroot/NewsFiles/Документ 1.docx
+/NewsSite.XUnitTests/ViewModelsMosks/Mosks/RegistrationVM_Mosk.cs
