Added functionality for working with a test database.
Added migrations that were used to create the test database, they should be applied if you upgraded to this version.
Now you can use a different connection string when creating the context.

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -2,7 +2,8 @@
   // Если запускаете проект на другой машине, обратите внимание, 
   // что имя сервера (Server=yourServerName) в строке подключения нужно поменять на имя того сервера, что доступен вам.
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-N9EORNQ;Database=NewsSiteDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-N9EORNQ;Database=NewsSiteDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TestConnection": "Server=DESKTOP-N9EORNQ;Database=TESTNewsSiteDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
