--- a/NewsSite.XUnitTests/NewsSite.Tests.csproj
+++ b/NewsSite.XUnitTests/NewsSite.Tests.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.11" />
