--- a/NewsSite.BlazorUI/NewsSite.BlazorUI.csproj
+++ b/NewsSite.BlazorUI/NewsSite.BlazorUI.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Home\" />
+    <ProjectReference Include="..\NewsSite.BL\NewsSite.BL.csproj" />
   </ItemGroup>
 
 </Project>
